Cleaned up API. Ready for Philip's review.

--- a/style.less
+++ b/style.less
@@ -78,6 +78,8 @@
 }
 
 .content-box-contents {
+    padding-top: @contentBoxBottomPadding;
+    margin-top: @contentBoxBottomMargin;
     padding-left: @gridGutterWidth;
     padding-right: @gridGutterWidth;
 }
