--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@
   padding-bottom: 10px;
 }
 .content-box-contents {
+  padding-top: 10px;
+  margin-top: 15px;
   padding-left: 20px;
   padding-right: 20px;
 }
